# coignet

./: Cargo.toml  README.md
src/: lib.rs
src/endpoints/: mod.rs
src/endpoints/client_server/: mod.rs  r0.rs  unstable.rs
src/endpoints/server_server/: mod.rs  unstable.rs
src/utils/: cached.rs  mod.rs  persisted.rs
src/utils/key_value/: cached.rs  in_memory.rs  mod.rs  singleton.rs
src/utils/key_value/cache/: lru.rs  mod.rs
